refactor(firings): remove obsolete per-firing machine usage model